--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     url: jdbc:mysql://localhost:3306/yu_picture
     username: root
     password: 1234
+  # 文件上传配置更大体积
+  servlet:
+    multipart:
+        max-file-size: 10MB
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
